# wasmtime-hostfunction-perf

./: .envrc  Cargo.toml  README.md  flake.nix
component/: Cargo.toml
component/src/: lib.rs
component/wit/: world.wit
runtime/: Cargo.toml
runtime/src/: main.rs
wit-runtime/: runtime.wit
