[package]
name = "component"
version = "0.1.0"
edition = "2021"

[dependencies]
cargo-component-bindings = "0.6.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:component"

[package.metadata.component.target.dependencies]
"runtime:runtime".path = "../wit-runtime/"
